[package]
name = "rusotoexp"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2018"

[dependencies]
anyhow = "~1.0.38"
bytes = "~1.0.1"
chrono = "~0.4.19"
futures = "~0.3.13"
rusoto_core = "~0.46.0"
rusoto_credential = "~0.46.0"
rusoto_s3 = "~0.46.0"
rusoto_ssm = "~0.46.0"
structopt = "~0.3.21"
tempfile = "~3.2.0"
tokio = { version = "~1.2.0", features = ["full"] }
tokio-util = { version ="~0.6.4", features = ["io"] }
